Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-132695

Crash in QGuiApplication::applicationStateChanged() when quitting app

XMLWordPrintable

    • Android
    • 81ffb8c32 (dev), cb972cd5f (dev), 23c490f92 (6.10), adb9455c0 (6.10), dcc4736d5 (6.9), 7bb195a3b (6.9), d14231b25 (tqtc/lts-6.5), 2f391c66e (tqtc/lts-6.8), 57bf784d2 (tqtc/lts-6.8), 68172fa5a (tqtc/lts-6.5), c73d47b0c (tqtc/lts-6.5)
    • 2025wk34s2QtforAndroid

      Since updating to Qt 6.8.1 we’re seeing crashes triggered by QGuiApplication::applicationStateChanged() when quitting the app (e.g. by swiping up in the Android app switcher). We can reproduce this about 10% of tries on various Android devices and OS versions simply by launching and then quitting the app.

      The full stack trace is attached and also available here with relative offsets (select "Full Stack Trace").

        1. crash.log
          5 kB
          Frederik Seiffert
        2. Qt-6.9.0-applicationStateChanged-crash-1.txt
          3 kB
          Frederik Seiffert
        3. Qt-6.9.0-applicationStateChanged-crash-2.txt
          5 kB
          Frederik Seiffert
        4. image-2025-05-30-12-28-39-888.png
          43 kB
          Frederik Seiffert
        5. image-2025-07-02-15-34-50-142.png
          105 kB
          Frederik Seiffert
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            assam Assam Boudjelthia
            fseiffert Frederik Seiffert
            Votes:
            2 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: